banner alignment fix

--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -210,7 +210,7 @@ header .menubtn {
 }
 
 .hero {
-    height: 90vh;
+    height: 100%;
     width: 100%;
 
 }
